--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "nodemon server.js",
+    "start": "nodemon --ignore './tikets.json' server.js",
     "lint": "eslint ."
   },
   "engines": {
