added static recoil

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "3",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
+    "koa-static": "^5.0.0",
     "nodemon": "^2.0.4",
     "uuid": "^8.3.0"
   }
